Qt Designer: Suppress QEvent::LayoutRequest when changing layout span

QTabWidget activates its parent layout when resizing, which prevents
it from smoothly resizing when changing item spans. Suppress
the QEvent::LayoutRequest when the widget handle is in a span-changing
mode.

Task-number: QTBUG-61439
Change-Id: I87b2c9d5e3e6796983b730907cf3bfe8c7ed2292
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>